# groupJunior25022025FastAPI

./: .env-example  Makefile  README.md  docker-compose.yaml
.github/workflows/: linters.yaml
backend_api/: Dockerfile  pyproject.toml
backend_api/app/: Makefile  app_factory.py  main.py  settings.py
backend_api/app/applications/auth/: auth_handler.py  password_handler.py  router.py  security.py
backend_api/app/applications/payment/: router.py
backend_api/app/applications/products/: crud.py  models.py  router.py  schemas.py
backend_api/app/applications/users/: crud.py  models.py  router.py  schemas.py
backend_api/app/applicatoins/users/: router.py  schemas.py
backend_api/app/database/: session_dependencies.py
backend_api/app/migrations/: env.py
backend_api/app/migrations/versions/: 2025_05_02_1806-6ab6d4623ec1_add_users_table.py  2025_06_06_1646-2ccbafee720d_add_user_verification_and_admin_fields.py  2025_06_17_1701-0692945899da_add_product.py  (+1 more)
documentation/: mkdocs.yml
documentation/docs/: tasks.md
frontend/app/: app_factory.py  settings.py
frontend/app/backend_api/: api.py
frontend/app/routers/: main_page_router.py
frontend/app/templates/: index.html  login.html  product_detail.html  register.html
nginx/: nginx.conf
notification_service/: Dockerfile  pyproject.toml
notification_service/app/: main.py  settings.py
notification_service/app/services/rabbit/: constants.py  handlers.py  rabbitmq_service.py
notification_service/app/templates/: user_register.html
notification_service/app/utils/: email_sender.py
(+7 files in other folders)
