[tool.poetry]
name = "notification"
version = "0.1.0"
description = ""
authors = ["Vasyl <vasyl@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"
pydantic-settings = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
